0.17 to be released
    . Added test for circular reference fixed in 0.16

0.16 20101119
    . Enable use_queue parameter (but leave it undocumented)
    + Fix memory leak when using ->declare. This should fix the messages
      during global destruction.

0.15 20101021
    . Filter object for only immediate properties. This means that inherited
      properties don't show up anymore in keys %$obj or using exists. You
      can still get at their values though.
      See L<http://yuiblog.com/blog/2006/09/26/for-in-intrigue/> for a
      discussion of filtering and why it should happen.
    . Implement C<delete> (and tests) for hashes

0.14 20101017
    . Fix ->__event() to create the event in the correct .document.
      This fixes intermittent errors that were raised if (for example)
      the Firefox Javascript Console was the topmost Firefox window.
    . Add a test that checks that the Changes file has a well-formed date
      for every version

0.13 20100810
    . Squelch some warnings when global destruction pulls out the rug
      from under our feet.
    . Don't fetch results from Firefox if we don't need them.
      STORE() in tied elements should not return a value.

0.12 20100625
    . Fix bad unquoted passthrough of numbers with a leading zero. This
      led to those numbers being interpreted as octal numbers.
      Reported and diagnosed by Jess Robinson and James Mastros
    . Document limitations of passthrough
    + Die with an informative message if we can't connect

0.11 20091130
    . Don't carp() in ::TiedHash or ::TiedArray
    . Added "launch" option to launch a mozrepl process
    . This means we need IPC::Run as a prerequisite

0.10 20091126
    . Add way to deregister callbacks to release the memory
      taken up on the Perl side for them.

0.09 20091121
    . Add tests for multiple bridge instances
    . Multiple bridge instances work (except for some warnings
      originating from MozRepl.pm)
    . Some code cleanup

0.08 20091111